--- a/CrawlingTwitterMyPertamina.ipynb
+++ b/CrawlingTwitterMyPertamina.ipynb
@@ -80,10 +80,10 @@
       },
       "outputs": [],
       "source": [
-        "api_key = 'nx40BoJXROpfmRa8280R9wfRQ'\n",
-        "api_key_secret = '8Drx5rDqhlC3yhPOOEUelgSQvoECXJvtP33uHnKCUleb2hSaq9'\n",
-        "access_token = \"1381969089967448066-n80ZZDH4e1Y3MohQWoxCfzn1pFRHjL\"\n",
-        "access_token_secret = \"Y3o2f6utruaFaMvdpMlJ22BnN4eH7AkVJWybJXMUHE5ub\""
+        "api_key = 'API KEY'\n",
+        "api_key_secret = 'API SECRET KEY'\n",
+        "access_token = \"ACCES TOKEN"\n",
+        "access_token_secret = \"ACCESS TOKEN SECRET""
       ]
     },
     {
